...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gUD-Hr-PMb">
                                <rect key="frame" x="0.0" y="34" width="375" height="44"/>
                                <items/>
                            </toolbar>
                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cRB-WE-fXs" userLabel="Bottom Bar">
                                <rect key="frame" x="0.0" y="734" width="375" height="44"/>
                                <color key="backgroundColor" white="0.31579914539999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="eLR-y7-q84"/>
                                </constraints>
                                <items>
                                    <barButtonItem title="Other Listeners" id="KM8-Nj-ouj">
                                        <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <connections>
                                            <segue destination="h8z-TC-jmu" kind="show" id="yRw-BL-oi0"/>
                                        </connections>
                                    </barButtonItem>
                                    <barButtonItem image="baseline_people_black_48pt" id="L0x-Wh-8wq">
...
                        <viewLayoutGuide key="safeArea" id="Dbi-Oj-D8A"/>
                        <connections>
                            <outletCollection property="gestureRecognizers" destination="6rY-9F-nyk" appends="YES" id="9xA-Bs-B4t"/>
                            <outletCollection property="gestureRecognizers" destination="vM9-Ub-XXV" appends="YES" id="mrB-E6-QWq"/>
                        </connections>
                    </view>
                    <navigationItem key="navigationItem" title="Home" id="wBi-c5-Nvn">
                        <barButtonItem key="leftBarButtonItem" image="baseline_menu_white_48pt" id="AMh-L9-wcc">
                            <color key="tintColor" red="0.74005721079999998" green="0.45824238439999998" blue="0.31751342700000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                            <connections>
                                <action selector="MenuPressed:" destination="gu5-Bg-68n" id="wI3-fs-MSl"/>
                            </connections>
                        </barButtonItem>
...
